concord_examples/tests/ui/rate_limit_bucket_cost_zero.stderr
error: rate_limit bucket cost must be greater than zero
  --> tests/ui/rate_limit_bucket_cost_zero.rs:12:22
   |
12 |                 cost 0 // ERROR: cost must be > 0
   |                      ^
